--- a/app/scss/blocks/links-buttons.scss
+++ b/app/scss/blocks/links-buttons.scss
@@ -8,6 +8,7 @@
   line-height: 18px;
   font-family: "Open Sans", sans-serif;
   font-weight: normal;
+  text-transform: lowercase;
 }
 .links-buttons__phone {
   width: 170px;
