--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,9 @@
 @import 'blocks/page-header';
 @import 'blocks/nav';
 @import 'blocks/links-buttons';
+@import 'blocks/offer';
 @import 'blocks/company';
+@import 'blocks/advantages';
+@import 'blocks/reviews';
 
 
