--- a/app/scss/blocks/company.scss
+++ b/app/scss/blocks/company.scss
@@ -9,6 +9,7 @@
   justify-content: space-between;
   width: 1280px;
   margin: 0 auto;
+  margin-top: 140px;
   padding-left: 155px;
   padding-right: 55px;
 }
