--- a/app/scss/blocks/advantages.scss
+++ b/app/scss/blocks/advantages.scss
@@ -1,5 +1,6 @@
 .advantages {
   width: auto;
+  padding-top: 100px;
 }
 
 .advantages__wrapper {
@@ -11,14 +12,14 @@
 
 .advantages__teaser {
   width: 360px;
-  margin-top: 70px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .advantages__list {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .advantages__item {
@@ -27,10 +28,11 @@
   align-items: center;
   justify-content: center;
   width: 300px;
-  margin-bottom: 65px;
+  margin-bottom: 35px;
 }
 .advantages__img {
   margin-bottom: 10px;
+  align-self: flex-start;
 }
 .advantages__title {
   margin-bottom: 11px;
