--- a/app/scss/blocks/offer.scss
+++ b/app/scss/blocks/offer.scss
@@ -1,9 +1,11 @@
 .offer {
   width: auto;
-  // background-image: url(../../img/header__bg.jpg);
-  // background-repeat: no-repeat; 
-  // background-position: center;
-  // background-size: cover;
+  margin-top: -86px;
+  padding-top: 200px;
+  background-image: url(../../img/header__bg.jpg);
+  background-repeat: no-repeat; 
+  background-position: top center;
+  background-size: cover;
 }
 
 .offer__wrapper {
@@ -16,7 +18,7 @@
 .offer__title {
   width: 600px;
   margin-bottom: 40px;
-  font-size: 42px;
+  font-size: 46px;
   line-height: 54px;
   font-weight: bold;
   text-align: left;
