--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -22,6 +22,7 @@
 .clients__list {
   display: flex;
   justify-content: flex-start;
+  margin-bottom: 60px;
   list-style: none;
 }
 .clients__item {
@@ -30,4 +31,51 @@
   height: 65px;
   margin-right: 30px;
   background: #000;
+}
+
+.review {
+  width: 770px;
+  padding-top: 50px;
+  padding-bottom: 30px;
+  padding-left: 60px;
+  background-color: #eee;
+}
+.review__slide {
+  display: flex;
+}
+.review__img {
+  width: 70px;
+  margin-right: 50px;
+  border-radius: 100%;
+}
+
+.review__img img {
+  margin: 0 auto;
+  border-radius: 100%;
+}
+
+.review__text {
+  width: 525px;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.review__toggle {
+  display: flex;
+  margin-left: 120px;
+}
+
+.review__toggle-btn {
+  background: none;
+  border: none;
+  
+  &--prev {
+    margin-right: 15px;
+  }
+  &--next {
+    margin-left: 15px;
+  }
+}
+.review__toggle-numbers {
+  font-size: 14px;
 }
