--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,5 +8,8 @@
 @import 'blocks/company';
 @import 'blocks/advantages';
 @import 'blocks/reviews';
+@import 'blocks/contacts';
+@import 'blocks/page-footer';
+
 
 
