--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -1,6 +1,6 @@
 .contacts {
   width: auto;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .contacts__wrapper {
@@ -8,6 +8,7 @@
   width: 1280px;
   margin: 0 auto;
   padding-left: 155px;
+  padding-top: 100px;
   padding-right: 55px;
 }
 
