--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,7 +5,7 @@
 @import 'blocks/nav';
 @import 'blocks/links-buttons';
 @import 'blocks/offer';
-@import 'blocks/company';
+@import 'blocks/about';
 @import 'blocks/advantages';
 @import 'blocks/reviews';
 @import 'blocks/contacts';
