--- a/app/scss/basic.scss
+++ b/app/scss/basic.scss
@@ -26,11 +26,16 @@ img {
 .button {
   display: block;
   padding: 10px;
-  border: 1px solid #efe9e3;
+  border: 1px solid #C50B1E;
   border-radius: 25px;
   text-align: center;
   font-size: 18px;
   line-height: 24px;
   text-transform: uppercase;
   font-weight: bold;
+}
+.button:hover {
+  background: #C50B1E;
+  border-color: trasparent;
+  color: #fff;
 }
