--- a/app/scss/blocks/links-buttons.scss
+++ b/app/scss/blocks/links-buttons.scss
@@ -14,3 +14,13 @@
   width: 170px;
   margin-right: 18px;
 }
+body.fp-viewing-about .links-buttons__phone,
+body.fp-viewing-advantages .links-buttons__phone,
+body.fp-viewing-reviews .links-buttons__phone,
+body.fp-viewing-contacts .links-buttons__phone,
+body.fp-viewing-about .links-buttons__email,
+body.fp-viewing-advantages .links-buttons__email,
+body.fp-viewing-reviews .links-buttons__email,
+body.fp-viewing-contacts .links-buttons__email  {
+  color: #000;
+}
