--- a/app/scss/blocks/page-footer.scss
+++ b/app/scss/blocks/page-footer.scss
@@ -1,7 +1,7 @@
 .page-footer {
   width: auto;
-  margin-top: 95px;
-  padding-bottom: 30px;
+  margin-top: 20px;
+  background-color: #eee;
 }
 .page-footer__wrapper {
   display: flex;
