--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -6,47 +6,56 @@
   width: 1280px;
   margin: 0 auto;
   padding-left: 155px;
+  padding-top: 100px;
   padding-right: 55px;
-}
-.clients {
-  margin-top: 80px;
-  margin-bottom: 60px;
 }
 
 .clients__text {
   width: 680px;
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
 }
 .clients__list {
-  display: flex;
-  justify-content: flex-start;
-  margin-bottom: 60px;
+  display: block;
+  width: 500px;
   list-style: none;
 }
 .clients__item {
-  display: block;
-  width: 170px;
-  height: 65px;
+  display: flex;
+  width: 200px;
+  height: 150px;
   margin-right: 30px;
-  background: #000;
+  opacity: 1;
+  transition: all .3 ease;
+}
+.clients__item:hover {
+  opacity: .7;
 }
 
+.clients__item img {
+  max-width: 100%;
+  height: auto;
+  margin-top: auto;
+}
 .review {
   width: 770px;
   padding-top: 50px;
   padding-bottom: 30px;
   padding-left: 60px;
-  background-color: #eee;
 }
 .review__slide {
   display: flex;
 }
+.review__author {
+  text-align: center;
+  margin-right: 50px;
+}
 .review__img {
   width: 70px;
-  margin-right: 50px;
   border-radius: 100%;
+  margin: 0 auto;
+  margin-bottom: 15px;
 }
 
 .review__img img {
@@ -55,14 +64,15 @@
 }
 
 .review__text {
-  width: 525px;
+  width: 500px;
   font-size: 16px;
+  line-height: 22px;
   margin-bottom: 30px;
 }
 
 .review__toggle {
   display: flex;
-  margin-left: 120px;
+  margin-left: auto;
 }
 
 .review__toggle-btn {
@@ -78,4 +88,22 @@
 }
 .review__toggle-numbers {
   font-size: 14px;
+}
+
+.name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.name__item {
+  width: 125px;
+  font-size: 14px;
+  line-height: 19px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.name__text {
+  font-size: 12px;
+  line-height: 17px;
 }
