--- a/app/scss/blocks/contacts.scss
+++ b/app/scss/blocks/contacts.scss
@@ -1,137 +1,26 @@
 .contacts {
+  position: relative;
   width: auto;
-  margin-bottom: 50px;
+  background-color: #f9f9f9;
 }
 
 .contacts__wrapper {
-  position: relative;
   display: flex;
   width: 1280px;
   margin: 0 auto;
   padding-left: 155px;
   padding-top: 100px;
   padding-bottom: 50px;
+  padding-right: 55px;
 }
-
-.form {
+.contacts__map {
   position: absolute;
-  top: 100px;
-  left: 50%;
-  right: 50%;
-  display: block;
-  padding: 40px 30px 50px;
-  margin: 0 auto;
-  width: 370px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
-  transform: translateX(-135px);
-  background-color: #fff;
-  text-align: left;
-  z-index: 5;
-
-}
-.form__title {
-  margin: 0 auto;
-  margin-bottom: 25px;
-  font-size: 24px;
-  line-height: 33px;
-  font-weight: normal;
-
-}
-.form__inputs {
-  display: flex;
-  flex-direction: column;
-}
-
-.form__lable {
-  display: block;
-  font-size: 16px;
-  line-height: 22px;
-  color: #787878;
-}
-
-.form__input {
-  display: block;
-  width: 290px;
-  margin-bottom: 20px;
-  border: none;
-  border-bottom: solid 1px #979797;
-  padding: 5px 0px;
-  font-size: 16px;
-  line-height: 22px;
-
-}
-.form__textarea {
-  display: block;
-  width: 290px;
-  margin-bottom: 20px;
-  border: none;
-  border-bottom: solid 1px #979797;
-  padding: 5px 0;
-  font-size: 16px;
-  line-height: 22px;
-  resize: none;
-}
-
-.form__checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
-  margin: 10px 0 0 20px;
-}
-.form__checkbox + .form__check-lable {
-  position: relative;
-  padding: 0 0 0 25px;
-  cursor: pointer;
-}
-.form__checkbox + .form__check-lable:before {
-  content: '';
-  position: absolute;
+  right: 0;
   top: 0;
-  left: 0;
-  width: 16px;
-  height: 16px;
-  border-radius: 2px;
-  background-color: #ffffff;
-  border: solid 1px #dddddd;
+  bottom: 0;
+  margin: auto;
+  width: 50%;
 }
-
-.form__checkbox + .form__check-lable:after {
-  content: '';
-  position: absolute;
-  top: 3px;
-  left: 0px;
-  display: none;
-  width: 15px;
-  height: 15px;
-  border-radius: 10px;
-  background-image: url(../../img/icon-check.png);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  transition: all .3s;
-}
-.form__checkbox:checked + .form__check-lable:after {
-  display: block;
-}
-
-.form__check-lable {
-  font-size: 10px;
-}
-.form__button {
-  width: 170px;
-  display: inline-block;
-  margin-top: 25px;
-  background: none;
-  border: solid 1px transparent;
-  background-color: #C50B1E;
-  color: #fff;
-  font-size: 16px;
-  line-height: 22px;
-  text-transform: none;
-  font-weight: normal;
-}
-
 .contacts__title { 
   margin-bottom: 25px;
   font-size: 28px;
@@ -178,12 +67,135 @@
   line-height: 24px;
   text-transform: uppercase;
 }
-.contacts__map {
-  width: 50%;
-  height: 100vh;
-  margin-left: auto;
-  margin-bottom: 40px;
-  margin-top: -100px;
+.form {
+  position: absolute;
+  top: 125px;
+  left: 50%;
+  right: 50%;
+  display: block;
+  padding: 40px 30px 50px;
+  margin: 0 auto;
+  width: 370px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  transform: translateX(-135px);
+  background-color: #fff;
+  text-align: left;
+  z-index: 5;
+
+}
+.form__title {
+  margin: 0 auto;
+  margin-bottom: 25px;
+  font-size: 24px;
+  line-height: 33px;
+  font-weight: normal;
+
+}
+.form__inputs {
+  display: flex;
+  flex-direction: column;
+}
+
+.form__lable {
+  display: block;
+  font-size: 16px;
+  line-height: 22px;
+  color: #787878;
+}
+
+.form__input {
+  display: block;
+  width: 290px;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: solid 1px #979797;
+  padding: 5px 0px;
+  font-size: 16px;
+  line-height: 22px;
+  transition: all .3s;
+}
+
+.form__textarea {
+  display: block;
+  width: 290px;
+  margin-bottom: 20px;
+  border: none;
+  border-bottom: solid 1px #979797;
+  padding: 5px 0;
+  font-size: 16px;
+  line-height: 22px;
+  resize: none;
+  transition: all .3s;
+}
+
+.form__input:focus,
+.form__textarea:focus {
+  border-bottom: solid 1px #c50b1e;
+  color: #c50b1e;
+}
+.form__textarea:focus.form__lable {
+  color: #c50b1e;
+}
+.form__checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+  margin: 10px 0 0 20px;
+}
+.form__checkbox + .form__check-lable {
+  position: relative;
+  padding: 0 0 0 25px;
+  cursor: pointer;
+}
+.form__checkbox + .form__check-lable:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  background-color: #ffffff;
+  border: solid 1px #dddddd;
+}
+
+.form__checkbox + .form__check-lable:after {
+  content: '';
+  position: absolute;
+  top: 3px;
+  left: 0px;
+  display: none;
+  width: 15px;
+  height: 15px;
+  border-radius: 10px;
+  background-image: url(../../img/icon-check.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  transition: all .3s;
+}
+.form__checkbox:checked + .form__check-lable:after {
+  display: block;
+}
+
+.form__check-lable {
+  font-size: 10px;
+}
+.form__button {
+  width: 180px;
+  display: inline-block;
+  margin-top: 25px;
+  padding: 10px 20px;
+  background: none;
+  border: solid 1px transparent;
+  background-color: #C50B1E;
+  color: #fff;
+  font-size: 16px;
+  line-height: 18px;
+  text-transform: none;
+  font-weight: normal;
+  transition: all .3s;
 }
 
 ::-webkit-input-placeholder {
@@ -226,34 +238,43 @@
   font-size: 16px;
   line-height: 22px;
 }
-
-.contacts__social {
-  margin-bottom: 45px;
+.social {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 40px;
 }
-
 .social__list {
   list-style: none;
 }
 
 .social__list {
-  margin-right: 35px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 .social__item {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  margin-right: 30px;
-  background-color: #000;
+  margin-right: 20px;
 }
 .social__link {
   width: 30px;
   height: 30px;
-  margin-right: 30px;
-  background-color: #000;
+}
+.social__private {
+  margin-top: 150px;
+}
+.social__private a {
+  display: block;
+  color: #000;
 }
 
-.social__private a {
-  display: inline-block;
-  color: #000;
-  margin-left: 50px;
+@media only screen and (max-width : 1024px) {
+  .contacts__wrapper {
+    display: flex;
+    width: 1024px;
+    margin: 0 auto;
+    padding-left: 135px;
+    padding-top: 100px;
+    padding-right: 55px;
+  }
 }
