--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -6,42 +6,20 @@
   width: 1280px;
   margin: 0 auto;
   padding-left: 155px;
-  padding-top: 100px;
+  padding-top: 30px;
   padding-right: 55px;
 }
 
-.clients__text {
-  width: 680px;
-  font-size: 16px;
-  line-height: 24px;
-  margin-bottom: 25px;
-}
-.clients__list {
-  display: flex;
-  width: 640px;
-  list-style: none;
-}
-.clients__item {
-  width: 200px;
-  max-height: 70px;
-  margin-right: 30px;
-  opacity: 1;
-  transition: all .3 ease;
-}
-.clients__item:hover {
-  opacity: .7;
+.reviews__title {
+  width: 500px;
+  margin-bottom: 80px;
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: normal;
 }
 
-.clients__item img {
-  max-width: 100%;
-  height: auto;
-  margin-top: auto;
-}
 .review {
   width: 770px;
-  padding-top: 50px;
-  padding-bottom: 30px;
-  padding-left: 60px;
 }
 .reviews__slider {
   position: relative;
@@ -75,11 +53,11 @@
 }
 
 .review__toggle {
-  position: absolute;
-  bottom: 0;
-  right: 0;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
+  width: 675px;
+  margin: 0 auto 60px;
 }
 
 .review__toggle-btn {
@@ -118,4 +96,61 @@
 .name__text {
   font-size: 12px;
   line-height: 17px;
+}
+
+
+.clients__list {
+  display: flex;
+  align-items: center;
+  width: 970px;
+  margin: 0 auto;
+  list-style: none;
+}
+.clients__item {
+  width: 220px;
+  margin-right: 20px;
+  opacity: 1;
+  transition: all .3 ease;
+}
+.clients__item:hover {
+  opacity: .7;
+}
+
+.clients__item img {
+  max-width: 100%;
+  height: auto;
+  margin: auto;
+}
+
+@media only screen and (max-width : 1024px) {
+  .reviews__wrapper {
+    width: 1024px;
+    margin: 0 auto;
+    padding-left: 135px;
+    padding-top: 30px;
+    padding-right: 42px;
+  }
+
+  .reviews__title {
+    width: 500px;
+    margin-bottom: 80px;
+    font-size: 20px;
+    line-height: 27px;
+    font-weight: normal;
+  }
+  .review {
+    width: 670px;
+  }
+  .reviews__slider {
+    position: relative;
+    width: 675px;
+    margin: 0;
+  }
+  .review__toggle {
+    width: 500px;
+  }
+  .clients__list {
+    width: 660px;
+    margin: 0;
+  }
 }
