--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,9 @@
 @import 'basic';
 @import 'blocks/page-header';
 @import 'blocks/nav';
+@import 'blocks/mobile-menu';
 @import 'blocks/links-buttons';
+@import 'blocks/offer-mobile';
 @import 'blocks/offer';
 @import 'blocks/about';
 @import 'blocks/advantages';
