--- a/app/scss/blocks/advantages.scss
+++ b/app/scss/blocks/advantages.scss
@@ -23,7 +23,9 @@
   line-height: 25px;
   font-weight: normal;
 }
-
+.advantages__teaser-mobile {
+  display: none;
+}
 .advantages__button {
   display: inline-block;
   padding: 10px 20px;
@@ -66,7 +68,7 @@
   font-size: 14px;
   line-height: 18px;
 }
-@media only screen and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1024px) {
   .advantages__wrapper {
     width: 1024px;
     margin: 0 auto;
@@ -84,6 +86,9 @@
     font-size: 16px;
     line-height: 25px;
   }
+  .advantages__teaser-mobile {
+    display: none;
+  }
   .advantages__item {
     width: 33%;
   }
@@ -95,7 +100,69 @@
     line-height: 19px;
   }
   .advantages__text {
+    padding-right: 20px;
     font-size: 12px;
     line-height: 16px;
+    text-align: left;
+  }
+}
+@media only screen and (min-width : 640px) and (max-width : 959px) {
+  .advantages__wrapper {
+    width: auto;
+    padding: 50px 30px 0;
+  }
+  .advantages__topline {
+    margin: 0;
+  }
+  .advantages__teaser {
+    display: none;
+  }
+  .advantages__teaser-mobile {
+    display: inline-block;
+    font-size: 26px;
+    line-height: 32px;
+    font-weight: normal;
+  }
+  .advantages__teaser-mobile:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin-top: 5px;
+    margin-bottom: 40px;
+    background-color: #c50b1e;
+  }
+  .advantages__button {
+    display: none;
+  }
+}
+@media only screen and (min-width : 320px)and (max-width : 639px) {
+  .advantages__wrapper {
+    width: auto;
+    padding: 50px 20px 0;
+  }
+  .advantages__topline {
+    margin: 0;
+  }
+  .advantages__teaser {
+    display: none;
+  }
+  .advantages__teaser-mobile {
+    display: inline-block;
+    font-size: 26px;
+    line-height: 32px;
+    font-weight: normal;
+  }
+  .advantages__teaser-mobile:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin-top: 5px;
+    margin-bottom: 40px;
+    background-color: #c50b1e;
+  }
+  .advantages__button {
+    display: none;
   }
 }
