--- a/app/scss/blocks/links-buttons.scss
+++ b/app/scss/blocks/links-buttons.scss
@@ -25,7 +25,7 @@ body.fp-viewing-contacts .links-buttons__email  {
   color: #000;
 }
 
-@media only screen and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1024px) {
   .links-buttons__phone {
     width: 132px;
   }
@@ -33,5 +33,15 @@ body.fp-viewing-contacts .links-buttons__email  {
   .links-buttons__email {
     font-size: 14px;
     line-height: 19px;
+  }
+}
+@media only screen and (min-width : 640px) and (max-width : 959px) {
+  .links-buttons {
+    display: none;
+  }
+}
+@media only screen and (min-width : 320px)and (max-width : 639px) {
+  .links-buttons {
+    display: none;
   }
 }
