--- a/app/scss/blocks/nav.scss
+++ b/app/scss/blocks/nav.scss
@@ -48,7 +48,7 @@ body.fp-viewing-contacts .nav__link {
   color: #000;
 }
 
-@media only screen and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1024px) {
   .nav__item {
     margin-right: 20px;
   }
@@ -56,4 +56,10 @@ body.fp-viewing-contacts .nav__link {
     font-size: 14px;
     line-height: 19px;
   }
+}
+@media only screen and (min-width : 640px) and (max-width : 959px) {
+
+}
+@media only screen and (min-width : 320px)and (max-width : 639px) {
+
 }
