--- a/app/scss/blocks/offer.scss
+++ b/app/scss/blocks/offer.scss
@@ -67,16 +67,49 @@
   color: #fff;
 }
 
-@media only screen and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1024px) {
   .offer__wrapper {
     width: 1024px;
+    height: calc(100vh - 20px);
     margin: 0 auto;
     padding-left: 75px;
     padding-top: 100px;
-    padding-right: 42px;
+    padding-right: 40px;
   }
   .offer__title,
   .offer__link {
     margin-left: 60px;
+  }
+}
+@media only screen and (min-width : 640px) and (max-width : 959px) {
+  .offer__wrapper {
+    width: auto;
+    padding: 50px 30px 0;
+  }
+  .offer__title {
+    width: auto;
+    font-size: 28px;
+    line-height: 36px;
+    margin-bottom: 25px;
+    padding-right: 50px;
+  }
+  .we-can {
+    display: none;
+  }
+}
+@media only screen and (min-width : 320px)and (max-width : 639px) {
+  .offer__wrapper {
+    width: auto;
+    padding: 50px 20px 0;
+  }
+  .offer__title {
+    width: auto;
+    font-size: 28px;
+    line-height: 36px;
+    margin-bottom: 20px;
+    padding-right: 40px;
+  }
+  .we-can {
+    display: none;
   }
 }
