--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -17,6 +17,9 @@
   line-height: 25px;
   font-weight: normal;
 }
+.reviews__title-mobile {
+  display: none;
+}
 
 .review {
   width: 770px;
@@ -50,6 +53,10 @@
   font-size: 16px;
   line-height: 22px;
   margin-bottom: 30px;
+}
+
+.review__name-mobile {
+  display: none;
 }
 
 .review__toggle {
@@ -122,7 +129,7 @@
   margin: auto;
 }
 
-@media only screen and (max-width : 1024px) {
+@media only screen and (min-width : 960px) and (max-width : 1024px) {
   .reviews__wrapper {
     width: 1024px;
     margin: 0 auto;
@@ -146,11 +153,122 @@
     width: 675px;
     margin: 0;
   }
+  .review__name-mobile {
+    display: none;
+  }
   .review__toggle {
     width: 500px;
   }
   .clients__list {
     width: 660px;
     margin: 0;
+  }
+}
+@media only screen and (min-width : 640px) and (max-width : 959px) {
+  .reviews__wrapper {
+    width: auto;
+    padding: 50px 30px 0;
+  }
+  .reviews__title-mobile {
+    text-align: left;
+    display: inline-block;
+    font-size: 26px;
+    line-height: 32px;
+    font-weight: normal;
+  }
+  .reviews__title-mobile:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    margin-top: 5px;
+    margin-bottom: 40px;
+    background-color: #c50b1e;
+  }
+  .reviews__title {
+    display: none;
+  }
+}
+@media only screen and (min-width : 320px)and (max-width : 639px) {
+  .reviews__wrapper {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    padding: 50px 20px 0;
+  }
+  .reviews__title-mobile {
+    order: 0;
+    display: inline-block;
+    font-size: 26px;
+    line-height: 32px;
+    font-weight: normal;
+  }
+  .reviews__title-mobile:after {
+    content: '';
+    display: block;
+    width: 120px;
+    height: 3px;
+    margin-top: 5px;
+    margin-bottom: 40px;
+    background-color: #c50b1e;
+  }
+  .reviews__title {
+    display: none;
+  }
+  .reviews__slider {
+    order: 2;
+    width: 335px;
+    border-radius: 0 0 10px 10px;
+    background-color: #f8f8f8;
+    padding: 20px;
+    margin-bottom: 50px;
+  }
+  .review__toggle {
+    order: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 335px;
+    margin: 0 auto -12px;
+    border-radius: 10px 10px 0 0;
+    background-color: #f8f8f8;
+    padding: 25px;
+  }
+  .reviews__clients {
+    order: 3;
+  }
+  .review__slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: auto;
+  }
+  
+  .review__author {
+    width: 280px;
+    margin: 0;
+    order: 0;
+  }
+  .review__img {
+    width: auto;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    
+  }
+  .review__text {
+    order: 0;
+    width: 280px;
+
+  }
+  .review__name {
+    display: none;
+  }
+  .review__name-mobile {
+    order: 1;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    margin-bottom: auto;
+    margin-bottom: 20px;
   }
 }
