--- a/app/scss/blocks/about.scss
+++ b/app/scss/blocks/about.scss
@@ -168,6 +168,7 @@
   .about__stats p {
     width: 133px;
     margin-right: 5px;
+    margin-bottom: 20px;
     text-align: left;
     font-size: 14px;
     line-height: 19px;
