--- a/app/scss/blocks/reviews.scss
+++ b/app/scss/blocks/reviews.scss
@@ -166,11 +166,13 @@
 }
 @media only screen and (min-width : 640px) and (max-width : 959px) {
   .reviews__wrapper {
+    display: flex;
+    flex-direction: column;
     width: auto;
-    padding: 50px 30px 0;
+    padding: 50px 20px 0;
   }
   .reviews__title-mobile {
-    text-align: left;
+    order: 0;
     display: inline-block;
     font-size: 26px;
     line-height: 32px;
@@ -179,7 +181,7 @@
   .reviews__title-mobile:after {
     content: '';
     display: block;
-    width: 100%;
+    width: 120px;
     height: 3px;
     margin-top: 5px;
     margin-bottom: 40px;
@@ -187,6 +189,62 @@
   }
   .reviews__title {
     display: none;
+  }
+  .reviews__slider {
+    order: 2;
+    width: 335px;
+    border-radius: 0 0 10px 10px;
+    background-color: #f8f8f8;
+    padding: 20px;
+    margin-bottom: 50px;
+  }
+  .review__toggle {
+    order: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 335px;
+    margin: 0 auto -12px;
+    border-radius: 10px 10px 0 0;
+    background-color: #f8f8f8;
+    padding: 25px;
+  }
+  .reviews__clients {
+    order: 3;
+  }
+  .review__slide {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: auto;
+  }
+  
+  .review__author {
+    width: 280px;
+    margin: 0;
+    order: 0;
+  }
+  .review__img {
+    width: auto;
+    margin: 0 auto;
+    margin-bottom: 15px;
+    
+  }
+  .review__text {
+    order: 0;
+    width: 280px;
+
+  }
+  .review__name {
+    display: none;
+  }
+  .review__name-mobile {
+    order: 1;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    margin-bottom: auto;
+    margin-bottom: 20px;
   }
 }
 @media only screen and (min-width : 320px)and (max-width : 639px) {
